# Python-Modules

Module0/ex5/: ft_count_harvest_recursive.py
Module0/ex6/: ft_garden_summary.py
Module1/ex0/: ft_garden_intro.py
Module1/ex3/: ft_plant_factory.py
Module1/ex4/: ft_garden_security.py
Module1/ex5/: ft_plant_types.py
Module1/ex6/: ft_garden_analytics.py
Module2/ex1/: ft_different_errors.py
Module2/ex2/: ft_custom_errors.py
Module2/ex4/: ft_raise_errors.py
Module3/ex1/: ft_score_analytics.py
Module3/ex2/: ft_coordinate_system.py
Module3/ex3/: ft_achievement_tracker.py
Module3/ex4/: ft_inventory_system.py
Module4/: ANSWERS.txt  sample_data.json
Module4/ex0/: ft_ancient_text.py
Module4/ex1/: ft_archive_creation.py
Module4/ex2/: ft_stream_management.py
Module4/ex3/: ft_vault_security.py
Module4/ex4/: ft_crisis_response.py  sample_data.json
Module5/: ANSWERS.txt  Intra Projects Python Module 05 Edit.html  module5.tar  py.py
Module5/ex0/: stream_processor.py
Module5/ex1/: data_stream.py  ds.py
Module5/ex2/: nexus_pipeline.py
Module6/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Module6/alchemy/: __init__.py  elements.py  potions.py
Module7/ex0/: Card.py  CreatureCard.py  main.py
Module7/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
Module7/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
Module7/ex3/: AggressiveStrategy.py  (+5 more)
Module8/ex1/: a  loading.py  pyproject.toml  requirements.txt
Module_01/: module011.tar
Module_02/: test.py
Module_03/: ANSWERS.txt
(+45 files in other folders)
