[project]
name = "ex1"
version = "0.1.0"
description = "this is an assignment"
authors = [
    {name = "aymel-ha",email = "aymel-ha@realemail.com"}
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy (>=1.22,<2.0)",
    "pandas (>=1.5,<2.0)",
    "matplotlib (>=3.6,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
